<?xml version="1.0" encoding="utf-8"?>



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.entecmedia.boendersfitness.LocationActivity"
    android:background="@drawable/background_main_new">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@mipmap/ic_call_black_48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="E-mail: boenderfitness@hotmail.com"
        android:id="@+id/textView36"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Telefoon: 06-47371300"
        android:id="@+id/phone"
        android:textSize="18sp"
        android:layout_marginTop="39dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/textView36"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/only_during_opening_hours"
        android:id="@+id/textView38"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_mail"
        android:id="@+id/button"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"
        android:layout_above="@+id/button7"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_page_string"
        android:id="@+id/button7"
        android:textColor="#FFFFFF"
        android:backgroundTint="#3B5998"
        android:layout_above="@+id/fabutton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp" />

</RelativeLayout>
